--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A DICOM pseudonymization library in JavaScript.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "lint": "eslint ./src --ext .js,.ts"
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,19 @@
   "bugs": {
     "url": "https://github.com/radexperts/dicom-anonymizer/issues"
   },
-  "homepage": "https://github.com/radexperts/dicom-anonymizer#readme"
+  "homepage": "https://github.com/radexperts/dicom-anonymizer#readme",
+  "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.6",
+    "tsup": "^6.7.0",
+    "typescript": "^5.0.2",
+    "vitest": "^0.29.7"
+  },
+  "dependencies": {
+    "dcmjs": "^0.29.5"
+  }
 }
