--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "vitest": "^0.29.7"
   },
   "dependencies": {
-    "dcmjs": "^0.29.5"
+    "dcmjs": "^0.29.6",
+    "get-random-values": "^2.1.0"
   }
 }
