--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "preserveWatchOutput": true,
+    "sourceMap": true,
     "skipLibCheck": true,
     "strict": true,
     "strictNullChecks": true,
