Recommended VSCode extensions

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -18,3 +18,4 @@ vscode:
     - mhutchie.git-graph
     - streetsidesoftware.code-spell-checker
     - wayou.vscode-todo-highlight
+    - zixuanchen.vitest-explorer
