set lib compiler option

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "incremental": true,
     "inlineSources": false,
     "isolatedModules": true,
+    "lib": ["ES2021"],
     "module": "ES2015",
     "moduleResolution": "node",
     "noEmit": true,
