--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "incremental": true,
     "inlineSources": false,
     "isolatedModules": true,
-    "lib": ["ES2021"],
+    "lib": ["ES2021", "dom"],
     "module": "ES2015",
     "moduleResolution": "node",
     "noEmit": true,
