--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.8",
+    "eslint-config-prettier": "^8.10.0",
+    "prettier": "2.8.8",
     "tsup": "^6.7.0",
     "typescript": "^5.0.2",
     "vitest": "^0.29.7"
