--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -9,7 +9,7 @@
     "incremental": true,
     "inlineSources": false,
     "isolatedModules": true,
-    "lib": ["ES2021.String", "dom"],
+    "lib": ["ES2021", "dom"],
     "module": "ES2015",
     "moduleResolution": "node",
     "noEmit": true,
@@ -22,9 +22,9 @@
     "skipLibCheck": true,
     "strict": true,
     "strictNullChecks": true,
-    "target": "ES2015",
+    "target": "ES2021",
     "tsBuildInfoFile": ".tsbuildinfo"
   },
-  "include": ["types/**/*"],
-  "exclude": ["node_modules", "public"]
+  "include": ["types/*"],
+  "exclude": ["node_modules", "public/**/*"]
 }
