--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
   "name": "dicom-web-anonymizer",
-  "files": [
-    "dist",
-    "types"
-  ],
   "description": "A DICOM web pseudonymization library in JavaScript.",
   "type": "module",
   "types": "./types/dcm.d.ts",
@@ -38,21 +34,23 @@
   "homepage": "https://github.com/radexperts/dicom-anonymizer#readme",
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
-    "@types/node": "^20.5.9",
+    "@types/node": "^20.16.7",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.10.0",
+    "fs": "^0.0.1-security",
+    "happy-dom": "^15.7.4",
+    "jsdom": "^25.0.1",
     "prettier": "2.8.8",
     "tsup": "^6.7.0",
-    "typescript": "^5.0.2",
-    "vite": "^5.1.4",
-    "vitest": "^0.29.7"
+    "typescript": "^5.6.2",
+    "vite": "^5.4.8",
+    "vite-plugin-dts": "^4.2.2",
+    "vitest": "^2.1.1"
   },
   "dependencies": {
-    "@types/node": "^20.11.20",
     "dcmjs": "^0.30.1",
-    "fs": "^0.0.1-security",
     "get-random-values": "^2.1.0"
   }
 }
