exclude some files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
     "tsBuildInfoFile": ".tsbuildinfo"
   },
   "include": ["types/**/*"],
-  "exclude": ["node_modules", "public"]
+  "exclude": ["node_modules", "public", "src/loader.ts", "**/demo/**"]
 }
